feat(core): Test company endpoints
