# server/types/zod-schema.ts
@@ -21,6 +21,12 @@ export const SearchUserSchema = z.object({
   type: z.enum(["email", "id"]),
 });
 
+// Schema used when searching for a company
+export const SearchCompanySchema = z.object({
+  term: z.string().min(2),
+  type: z.enum(["email", "id", "name"]),
+});
+
 // Schema used for admin login
 export const AdminLoginSchema = z.object({
   email: z.string().email(),
